--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,21 +1,20 @@
 body {
-  background-color: #282c34;
+  background-color: #a4b3d0;
 }
 
 .App {
   text-align: center;
-  max-width: 728px;
   margin: 0 auto;
 }
 
 .App header {
-  background-color: #181717;
+  background-color: #000000;
   height: 10vh;
   min-height: 50px;
   color: white;
   position: fixed;
   width: 100%;
-  max-width: 728px;
+ 
   top: 0;
   display: flex;
   align-items: center;
@@ -30,7 +29,7 @@ body {
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
-  background-color: rgb(40, 37, 53);
+  background-color: rgb(252, 252, 252);
 }
 
 main {
@@ -60,14 +59,14 @@ form {
   bottom: 0;
   background-color: rgb(24, 23, 23);
   width: 100%;
-  max-width: 728px;
+  
   display: flex;
   font-size: 1.5rem;
 }
 
 form button {
   width: 20%;
-  background-color: rgb(56, 56, 143);
+  background-color: rgb(4, 4, 5);
 }
 
 
@@ -101,8 +100,8 @@ button:disabled {
 
 
 .sign-in {
-  color: #282c34;
-  background: white;
+  color: #e8effc;
+  background: rgb(0, 0, 0);
   max-width: 400px;
   margin: 0 auto;
 }
@@ -141,6 +140,7 @@ p {
   background: #0b93f6;
   align-self: flex-end;
 }
+
 .received p {
   background: #e5e5ea;
   color: black;
